# mrrocpp

./: Toolchain-QCC.cmake
src/application/: CMakeLists.txt
src/application/image_switching/: CMakeLists.txt  aggregated_image_switching.cc  aggregated_image_switching.h  ecp_g_image_switching.cc  ecp_g_image_switching.h  ecp_g_image_switching_old.cc  ecp_g_image_switching_old.h  ecp_g_image_switching_test.cc  ecp_g_image_switching_test.h  ecp_t_image_switching.cc  ecp_t_image_switching.h  image_switching.ini  image_switching_types.h  pb_sac_calibration.ini  simple_binary_image_switching.cc  simple_binary_image_switching.h
src/application/image_switching/aggregated_backing_image_switching/: CMakeLists.txt  aggregated_backing_image_switching.cc  aggregated_backing_image_switching.h  aggregated_backing_image_switching.ini  ecp_t_image_switching.cc  ecp_t_image_switching.h  image_switching.ini
src/application/image_switching/aggregated_image_switching/: CMakeLists.txt  aggregated_image_switching.cc  aggregated_image_switching.h  aggregated_image_switching.ini  ecp_t_image_switching.cc  ecp_t_image_switching.h
src/application/image_switching/binary_sac_image_switching/: CMakeLists.txt  binary_sac_image_switching.cc  binary_sac_image_switching.h  binary_sac_image_switching.ini  ecp_g_image_switching.cc  ecp_t_image_switching.cc  ecp_t_image_switching.h  image_switching_types.h
src/application/image_switching/binary_treshold_image_switching/: CMakeLists.txt  binary_treshold_image_switching.cc  binary_treshold_image_switching.h  binary_treshold_image_switching.ini  ecp_t_image_switching.cc  ecp_t_image_switching.h
src/application/image_switching/simple_binary_image_switching/: CMakeLists.txt  ecp_t_image_switching.cc  ecp_t_image_switching.h  image_switching.ini  simple_binary_image_switching.cc  simple_binary_image_switching.h  simple_binary_image_switching.ini
src/application/image_switching/ternary_changing_image_switching/: CMakeLists.txt  ecp_t_image_switching.cc  ecp_t_image_switching.h  ternary_changing_image_switching.cc  ternary_changing_image_switching.h  ternary_changing_image_switching.ini
src/application/image_switching/ternary_image_switching/: CMakeLists.txt  ecp_t_image_switching.cc  ecp_t_image_switching.h  ternary_image_switching.cc  ternary_image_switching.h  ternary_image_switching.ini
src/application/servovision/: pb_sac_visual_servo.cc  pb_visual_servo.cc  single_visual_servo_manager.h  visual_servo.cc  visual_servo_manager.cc  visual_servo_types.h
src/base/edp/: edp_effector.cc  edp_m.cc
src/base/lib/: configurator.h
(+5 files in other folders)
